// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid renders correctly given a set of tiles 1`] = `
<div
  className="makeStyles-root-1 makeStyles-root-10"
>
  <div
    className="makeStyles-tile-2 makeStyles-tile-11"
  >
    <div
      className="makeStyles-root-7 makeStyles-root-12"
      onClick={[Function]}
    >
      <span
        className="makeStyles-tileNumber-8"
      >
        4
      </span>
    </div>
    <div
      className="makeStyles-root-7 makeStyles-root-13"
      onClick={[Function]}
    >
      <span
        className="makeStyles-tileNumber-8"
      >
        2
      </span>
    </div>
    <div
      className="makeStyles-root-7 makeStyles-root-14"
      onClick={[Function]}
    >
      <span
        className="makeStyles-tileNumber-8"
      >
        3
      </span>
    </div>
    <div
      className="makeStyles-root-7 makeStyles-root-15"
      onClick={[Function]}
    >
      <span
        className="makeStyles-tileNumber-8"
      >
        1
      </span>
    </div>
  </div>
</div>
`;

exports[`Grid renders correctly given an empty set of tiles 1`] = `
<div
  className="makeStyles-root-1 makeStyles-root-3"
>
  <div
    className="makeStyles-tile-2 makeStyles-tile-4"
  />
</div>
`;

exports[`Grid renders correctly given one tile 1`] = `
<div
  className="makeStyles-root-1 makeStyles-root-5"
>
  <div
    className="makeStyles-tile-2 makeStyles-tile-6"
  >
    <div
      className="makeStyles-root-7 makeStyles-root-9"
      onClick={[Function]}
    >
      <span
        className="makeStyles-tileNumber-8"
      >
        0
      </span>
    </div>
  </div>
</div>
`;
